--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
