--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Database Properties
+# Database Propertie
 spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username=test1
 spring.datasource.password=postgres
