--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
             <artifactId>jackson-core</artifactId>
             <version>2.10.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
 
 
