--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database Properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/new
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.username=test1
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
 spring.jpa.hibernate.ddl-auto=update
